@@ -1,8 +1,11 @@
 PostGIS 1.2.1
 (not published yet)
-        - JDBC: Fixed JTS handling for multi-dimensional geometries
-                (thanks to Thomas Marti for hint and partial patch)
-                Additionally, now JavaDoc is compiled out.
+        - JDBC: - Fixed JTS handling for multi-dimensional geometries
+                  (thanks to Thomas Marti for hint and partial patch)
+                - Additionally, now JavaDoc is compiled and packaged
+                - Fixed classpath problems with GCJ
+                - Fixed pgjdbc 8.2 compatibility, losing support for
+                  jdk 1.3 and older.
 
 PostGIS 1.2.0
 2006/12/08
