@@ -1,3 +1,13 @@
+2007-01-08 Markus Schaber <schabi@logix-tt.com>
+
+        * java/jdbc/Makefile:
+          Fixed gcj classpath problems
+        * src/org/postgis/DriverWrapperLW.java,
+          src/org/postgis/DriverWrapperAutoprobe.java,
+          src/org/postgis/DriverWrapper.java,
+          jtssrc/org/postgis/jts/JtsWrapper.java:
+          fixed 8.2 compatibility
+
 2007-01-05 Sandro Santilli <strk@refractions.net>
 
 	* GNUmakefile: bring in extra/template_gis for all rules.
